--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
-    "declaration": true,                   /* Generates corresponding '.d.ts' file. */
-    "outDir": "dist",                        /* Redirect output structure to the directory. */
-    "rootDir": "src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-    "strict": true,                            /* Enable all strict type-checking options. */
+    "target": "es5",
+    "declaration": true,
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true
   }
 }
